tdf#98458 sw: make search in shape text optional

Instead of forcing it silently on everyone, add a new search option and
enable it only in case it's requested, as shape search is expensive for
large documents.

(Regression from commit bdc1824ea7acfa2fe9d71cdbe57882acce155577.)

Change-Id: Ibb6e76ad5c870dfd63b36429e16ef6d572f5f1fd