svl/source/items/srchitem.cxx
@@ -127,7 +127,8 @@ SvxSearchItem::SvxSearchItem( const sal_uInt16 nId ) :
     m_bContent        ( false ),
     m_bAsianOptions   ( false ),
     m_nStartPointX(0),
-    m_nStartPointY(0)
+    m_nStartPointY(0),
+    m_bSearchInShapes(false)
 {
     EnableNotification( lcl_GetNotifyNames() );
 
@@ -226,7 +227,8 @@ SvxSearchItem::SvxSearchItem( const SvxSearchItem& rItem ) :
     m_bContent        ( rItem.m_bContent ),
     m_bAsianOptions   ( rItem.m_bAsianOptions ),
     m_nStartPointX(rItem.m_nStartPointX),
-    m_nStartPointY(rItem.m_nStartPointY)
+    m_nStartPointY(rItem.m_nStartPointY),
+    m_bSearchInShapes(rItem.m_bSearchInShapes)
 {
     EnableNotification( lcl_GetNotifyNames() );
 }
@@ -670,6 +672,11 @@ bool SvxSearchItem::PutValue( const css::uno::Any& rVal, sal_uInt8 nMemberId )
             bRet = (rVal >>= m_nStartPointY);
             break;
         }
+        case MID_SEARCH_INSHAPES:
+        {
+            bRet = (rVal >>= m_bSearchInShapes);
+            break;
+        }
         default:
             OSL_FAIL( "Unknown MemberId" );
     }
@@ -690,6 +697,11 @@ sal_Int32 SvxSearchItem::GetStartPointY() const
 bool SvxSearchItem::HasStartPoint() const
 {
     return m_nStartPointX > 0 || m_nStartPointY > 0;
+}
+
+bool SvxSearchItem::IsSearchInShapes() const
+{
+    return m_bSearchInShapes;
 }
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
