sw/qa/extras/tiledrendering/tiledrendering.cxx
@@ -328,7 +328,8 @@ void lcl_search(bool bBackward)
     uno::Sequence<beans::PropertyValue> aPropertyValues(comphelper::InitPropertySequence(
     {
         {"SearchItem.SearchString", uno::makeAny(OUString("shape"))},
-        {"SearchItem.Backward", uno::makeAny(bBackward)}
+        {"SearchItem.Backward", uno::makeAny(bBackward)},
+        {"SearchItem.SearchInShapes", uno::makeAny(true)}
     }));
     comphelper::dispatchCommand(".uno:ExecuteSearch", aPropertyValues);
 }
